# obd2-play

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml  pylint.yml
obd2_play/: __init__.py  __main__.py  errors.py  stats.py
