[tool.poetry]
name = "obd2-play"
version = "0.1.0"
description = ""
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
obd = "^0.7.2"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
